--- a/tpls/knowledgeRepo/knowledgeAdd.html
+++ b/tpls/knowledgeRepo/knowledgeAdd.html
@@ -121,10 +121,10 @@
             <input id="createUserId" type="createUserId" name="createUserId" placeholder="填写创建人" />
         </label>
 
-        <label>
-            <span>创建时间 :</span>
-            <input id="createTime" type="datetime-local" name="createTime" placeholder="2015/03/27 10:41" />
-        </label>
+        <!--<label>-->
+            <!--<span>创建时间 :</span>-->
+            <!--<input id="createTime" type="datetime-local" name="createTime" placeholder="2015/03/27 10:41" />-->
+        <!--</label>-->
         <label>
             <span>知识解答 :</span>
             <!--<textarea id="kAnswer" name="kAnswer" placeholder="填写知识解答"></textarea>-->
