--- a/tpls/knowledgeRepo/knowledgeAdd.html
+++ b/tpls/knowledgeRepo/knowledgeAdd.html
@@ -175,6 +175,8 @@
 
 //                $("#myform").after(msg); //将返回信息插入页面对应的元素后
             });
+            alert("aaaaaaa");
+
             return false;
         });
     });
