--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -127,7 +127,7 @@
 
                     location.href="index.html#!/knowledgeRepo/knowledgeAdd.html"
                 },
-                title:"知识添加",
+//                title:"知识添加",
                 position:"first"
             },{
 
