新建用户功能

--- a/tpls/user/userAdd.html
+++ b/tpls/user/userAdd.html
@@ -102,7 +102,7 @@
 
     <form class="required-validate form-horizontal" id="userAddForm" ng-controller="userAddCtrl">
 
-        <h1>新建用户</h1>
+        <h1 ng-model="title"></h1>
         <div class="form-group">
             <label>
                 <span>用户名 :</span>
