--- a/tpls/user/userList.html
+++ b/tpls/user/userList.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>用户列表</title>
 </head>
-<body>
-    <div class="row">
-        <div class="col-xs-12" style="height: 100%">
+<body ng-app="ulistapp">
+    <div class="row" ng-controller="uGridCtrl">
+        <div class="col-xs-12"  style="height: 100%">
             <div id="grid-search"></div>
             <table id="grid-table"></table>
             <div id="grid-pager"></div>
@@ -19,12 +19,28 @@
             var grid_selector = "#grid-table";
             var pager_selector = "#grid-pager";
             var grid_searcher ="#grid-search";
-            var colNames=['用户ID','用户名称','用户描述','创建者','创建时间','最后一次登录时间'];
+            var colNames=['修改','用户ID','用户名称','用户密码','用户描述','创建者','删除状态','创建时间','最后一次登录时间'];
             var colModel=[
-                {name:'id',index:'id',key:true,width:60,editable:true},
+                {name:'edit',index:'',width:80, fixed:true, sortable:false, resize:false,
+                    formatter: function (cellvalue,options,rowObject) {
+                        var html="<button class='fm-button' onclick='goEdit(\""+rowObject.id+"\")' ng-click='toEdit($event)'>修改</button>";
+                        return html;
+                    }},
+                {name:'id',index:'id',key:true,width:60,hidden:true,editable:false},
                 {name:'uName',index:'uName',width:80,editable:true,editoptions:{size:"40",maxlength:"50"}},
+                {name:'uPassword',index:'uPassword',width:80,hidden:true,editable:true,editoptions:{size:"40",maxlength:"50"}},
                 {name:'uDescription',index:'uDescription',width:140,sortable:false,editable:true,edittype:"textarea", editoptions:{rows:"2",cols:"10"}},
                 {name:'createUserId',index:'createUserId',width:60,editable:false},
+                {name:'deleteStatus',index:'deleteStatus',width:50,edittype:"checkbox",
+                    formatter:function (cellvalue,options,rowObject) {
+                        var color="",cev="未删除";
+                        if (cellvalue===0){
+                            color="red";
+                            cev="已删除";
+                        }
+                        var total="<span style='color:"+color+"'>"+cev+"</span>"
+                        return total;
+                    }},
                 {name:'createTime',index:'createTime',width:110,editable:false,sorttype:"date"},
                 {name:'uLastOnline',index:'uLastOnline',width:110,editable:false,sorttype:"date"}
             ];
@@ -117,9 +133,8 @@
                     },
                     title:"新建用户",
                     position:"first"
-                },{
-
                 });
+
 
             jQuery(grid_searcher).filterGrid(grid_selector,{
 //                gridModel: true,
@@ -237,6 +252,9 @@
             }
 
         });
+        function goEdit(rowid) {
+            window.location.href="#!/user/userAdd.html?edit=true&editId="+rowid;
+        }
     </script>
 </body>
 </html>
