--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -107,7 +107,7 @@
 //浏览导航栏添加功能部分代码
 
         jQuery(grid_selector).jqGrid('navGrid',pager_selector,{
-            edit: true,
+            edit: false,
             editicon : 'icon-pencil gray',
             add: false,
             addicon : 'icon-plus-sign purple',
@@ -122,16 +122,16 @@
 
               {
 //
-                addCaption: "Add Record",
-                editCaption: "Edit Record",
-                 bSubmit: "提交",
-                  bCancel: "Cancel",
-                  bClose: "Close",
-               saveData: "Data has been changed! Save changes?",
-                  bYes : "Yes",
-             bNo : "No",
-            bExit : "Cancel",
-            url:"index.html#!/knowledgeRepo/knowledgeEdit.html"
+//                addCaption: "Add Record",
+//                editCaption: "Edit Record",
+//                 bSubmit: "提交",
+//                  bCancel: "Cancel",
+//                  bClose: "Close",
+//               saveData: "Data has been changed! Save changes?",
+//                  bYes : "Yes",
+//             bNo : "No",
+//            bExit : "Cancel",
+//            burl:"index.html#!/knowledgeRepo/knowledgeEdit.html"
 
 
               }, // edit options
@@ -157,10 +157,23 @@
                 },
 //                title:"知识添加",
                 position:"first"
-            },{
-            });
+            }, {
+            })
 
+        .navButtonAdd(pager_selector,{
+            caption:"",
+            buttonicon:"icon-pencil gray",
+            onClickButton:function () {
+                var ids = $(grid_selector).jqGrid('getGridParam','selarrrow');
 
+                alert(ids);
+
+                location.href="index.html#!/knowledgeRepo/knowledgeEdit.html?id="+ids
+            },
+//                title:"知识编辑",
+            position:"first"
+        }, {
+        });
 
 
 
