--- a/tpls/knowledgeRepo/knowledgeEdit.html
+++ b/tpls/knowledgeRepo/knowledgeEdit.html
@@ -140,10 +140,10 @@
 
         <label>
             <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-
+            <div class="pull-right" style="margin-right: 50px">
             <input type="reset" class="button" id="reset" value="重置" />
             <input type="submit" class="button" id="submit"  value="提交" />
-
+            </div>
         </label>
     </form>
 </div>
