--- a/tpls/knowledgeRepo/knowledgeAdd.html
+++ b/tpls/knowledgeRepo/knowledgeAdd.html
@@ -9,7 +9,7 @@
         .basic-grey {
             margin-left:auto;
             margin-right:auto;
-            max-width: 800px;
+
             background: #F7F7F7;
             padding: 25px 15px 25px 10px;
             font: 12px Georgia, "Times New Roman", Times, serif;
@@ -21,9 +21,9 @@
         .text {
             margin-left:auto;
             margin-right:auto;
-            max-width: 450px;
+
             background: #F7F7F7;
-            padding: 25px 15px 25px 10px;
+            padding: 40px 15px 25px 10px;
             font: 12px Georgia, "Times New Roman", Times, serif;
             color: #888;
             text-shadow: 1px 1px 1px #FFF;
@@ -48,7 +48,7 @@
         }
         .basic-grey label>span {
             float: left;
-            width: 20%;
+            width: 10%;
             text-align: right;
             padding-right: 10px;
             margin-top: 10px;
@@ -60,10 +60,10 @@
             height: 30px;
             margin-bottom: 16px;
             margin-right: 6px;
-            margin-top: 2px;
+            margin-top: 30px;
             outline: 0 none;
             padding: 3px 3px 3px 5px;
-            width: 70%;
+            width: 50%;
             font-size: 12px;
             line-height:15px;
             box-shadow: inset 0px 1px 4px #ECECEC;
@@ -138,10 +138,10 @@
 
         <label>
             <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-
+            <div class="pull-right" style="margin-right: 50px">
             <input type="reset" class="button" id="reset" value="重置" />
             <input type="submit" class="button" id="submit"  value="提交" />
-
+            </div>
         </label>
     </form>
 </div>
@@ -150,10 +150,24 @@
     var editor1 = new E('#div1')  // 两个参数也可以传入 elem 对象，class 选择器
 
     editor1.customConfig.menus = [
-        'head',
-        'bold',
-        'italic',
-        'underline'
+        'head',  // 标题
+        'bold',  // 粗体
+        'italic',  // 斜体
+        'underline',  // 下划线
+        'strikeThrough',  // 删除线
+        'foreColor',  // 文字颜色
+        'backColor',  // 背景颜色
+        'link',  // 插入链接
+        'list',  // 列表
+        'justify',  // 对齐方式
+        'quote',  // 引用
+        'emoticon',  // 表情
+        'image',  // 插入图片
+        'table',  // 表格
+        'video',  // 插入视频
+        'code',  // 插入代码
+        'undo',  // 撤销
+        'redo'  // 重复
     ]
 
     editor1.create()
