--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -64,7 +64,7 @@
                 {name: "kTitle", index: "kTitle", width: 100,editable: true, edittype: "select", editoptions: {value: "1:采购入库;2:退用入库"}},
                 {name: "kAnswer", index: "kAnswer", width: 170, sorttype: "double", editable: true},
                 {name: "kUseCount", index: "kUseCount", width: 100, editable: true, editoptions: {size: "20", maxlength: "30"}},
-                {name: "kUseTimeLast", index: "kUseTimeLast", width: 220, sortable: false, editable: true, edittype: "textarea", editoptions: {rows: "2", cols: "10"},formatter:function(cellvalue, options, row){return new Date(cellvalue).toLocaleString()}},
+                {name: "kUseTimeLast", index: "kUseTimeLast", width: 220, sortable: false, editable: true,formatter:function(cellvalue, options, row){return new Date(cellvalue).toLocaleString()}},
                 {name: "kApprStatus", index: "kApprStatus", width: 150, editable: true, editoptions: {size: "20", maxlength: "30"}},
                 {name: "kApprUserId", index: "kApprUserId", width: 150, editable: true, editoptions: {size: "20", maxlength: "30"}},
                 {name: "kApprTime", index: "kApprTime", width: 220, editable: true, editoptions: {size: "20", maxlength: "30"},formatter:function(cellvalue, options, row){return new Date(cellvalue).toLocaleString()}},
@@ -154,7 +154,7 @@
             onClickButton:function () {
                 var ids = $(grid_selector).jqGrid('getGridParam','selarrrow');
 
-                alert(ids);
+
 
                 location.href="index.html#!/knowledgeRepo/knowledgeEdit.html?id="+ids
             },
