新建用户功能

--- a/tpls/index.html
+++ b/tpls/index.html
@@ -257,6 +257,7 @@
 		<script src="../components/javascripts/config.lazyload.js"></script>
 		<script src="../components/javascripts/config.router.js"></script>
 		<!-- inline scripts related to this page -->
+		<script src="../components/javascripts/globalset/jsconst.js"></script>
 		<script src="../components/javascripts/controllers/indexController.js"></script>
 		<script src="../components/javascripts/index.js"></script>
 
